--- a/ders/huruf.html
+++ b/ders/huruf.html
@@ -55,26 +55,26 @@
 
 <h2>Şifreli Harfler &emsp; <button class=goBack>◀</button></h2>
 
-<p>Asırlardır inkarcıları şaşırtan, inananları düşündüren bir i'caz unsuru bazı sûrelerin başındaki şifreli harfler. Bir şifre ki, hakkında binlerce kitap yazılmış, gene de kesin bilgimiz yok. Anlamını bilemediğimiz için olduğu gibi bırakıyoruz.</p>
+<p>Asırlardır inkarcıları şaşırtan, inananları düşündüren bir i'caz unsuru: bazı sûrelerin başındaki şifreli harfler. Bir şifre ki, hakkında binlerce kitap yazılmış, gene de kesin bilgimiz yok. Anlamını bilemediğimiz için olduğu gibi bırakıyoruz.</p>
 <p>"Haydi, buna benzer bir söz söyleyin; bütün bir kitap ya da sûre olmasın, cümle olmasın, kelime bile olmasın da anlamsız görünen bir tek harf olsun" diyor.</p>
 <blockquote>
 Mânâdan soyulmuş şu hece harflerinin zikri, muarızları hüccetsiz bırakmaya işarettir. Evet, Kur'ân-ı Mu'cizü'l-Beyan, şu mânâsız harflerin lisan-ı haliyle ilân ediyor ki:
 "Ben sizden beliğ mânâları, hükümleri, hakikatleri ifade eden yüksek hutbeleri ve nutukları istemiyorum. Yalnız şu tâdâd ettiğim harflerden bir nazîre yapınız, velev iftira ve hikâyelerden ibaret bile olursa olsun!"</blockquote>
 
-<p>Bir talebemin kıymetli gözlemi: Bu harfler, sûre ismi, i'caz unsuru, dikkat çekmek, başka kelimelerin kısaltmaları gibi olası diğer anlamları dışında, "bire bir çevrilemez" olmaları bakımından, meallerin Arapça orijinallerinden kopmalarını imkansız hale getiriyor. Diğer bir deyişle, şifreli harfler başka bir dile asla çevrilemiyor.</p>
+<p>Bir talebemin kıymetli gözlemi: Bu harfler, sûre ismi, i'caz unsuru, dikkat çekmek, kelime kısaltmaları gibi olası diğer anlamları dışında, "bire bir çevrilemez" olmaları bakımından, meallerin Arapça orijinallerinden kopmalarını imkansız hale getiriyor. Diğer bir deyişle, şifreli harfler başka bir dile asla çevrilemiyor.</p>
 <p>Toplam 29 sûrenin başındaki 30 ayet söz konusu. Tek harfli olan üç tanesi ilk inen ayetler arasında:<br>
 <a href=#sad>Sâd</a>, <a href=#qaf>Qâf</a>, <a href=#nun>Nûn</a>. Üçünde de çarpıcı bir kasem ve önemli bir hüküm var.</p>
 <p>Sonra iki harfliler: <a href=#taha>Tâ-Hâ</a>, <a href=#neml>Tâ-Sîn,</a> <a href=#yasin>Yâ-Sîn</a>, 7x<a href=#gafir>Hâ-Mîm</a> (10 ayet) </p>
 <p>Üç harfliler: 6x<a href=#ankebut>Elif-Lâm-Mîm,</a> 5x<a href=#yunus>Elif-Lâm-Râ</a>, 2x<a href=#şuara>Tâ-Sîn-Mîm</a>, <a href=#şura>Ayn-Sîn-Qâf</a> (14 ayet) </p>
 <p>Çok harfliler: <a href=#araf>Elif-Lâm-Mîm-Sâd</a>, <a href=#rad>Elif-Lâm-Mîm-Râ</a>, <a href=#meryem>Kâf-Hâ-Yâ-Ayn-Sâd</a> (3 ayet) </p>
-<p>Aşağıda, şifreli harflerin bulunduğu 29 sûrenin ilk birkaç ayetini ve M Okuyan mealini bulacaksınız. Bir kelimeye tıklayarak, aynı Arapça kökten türetilmiş bütün kelimeleri, böylece kavramlar arasındaki ilişkiyi görebilirsiniz. (Hâ-Mîm'lerde Türkçe kelimeler aktif, diğerlerinde henüz değil.) Bu çalışma <a href="../cuma/hamim.html">7 adet Hâ-Mîm</a> ile başlamıştı, şimdi hepsi tamamlandı. </p>
+<p>Aşağıda, şifreli harflerin bulunduğu 29 sûrenin ilk birkaç ayetini ve M Okuyan mealini bulacaksınız. Bir kelimeye tıklayarak, aynı Arapça kökten türetilmiş bütün kelimeleri, böylece kavramlar arasındaki ilişkiyi görebilirsiniz. Bu çalışma <a href="../cuma/hamim.html">7 adet Hâ-Mîm</a> ile başlamıştı, şimdi 29 sûre tamamlandı. </p>
 
 <table id=tablo>
   <tr>
     <td>
 <a class=sure href="/Kuran/reader.html#v=2:1" target="iqra">2 Bakara</a>
 <span data="harf">Elif Lâm Mîm</span> *
-Bu <span data=ktb>kitap</span> (Kur’an) ki onda asla <span data=ryb>şüphe</span> yoktur. <span data=wqy>Muttakîler</span> için bir <span data=hdy>rehberdir</span>. * Onlar <span data=gyb>gayba</span> <span data=Amn>inanır</span>, <span data=Slw>namaz</span> kılar ve <span data=rzq>rızık</span> olarak verdiklerimizden <span data=nfq>infak ederler</span>. * Sana <span data=nzl>indirilene</span> ve senden önce <span data=nzl>indiri­lene</span> <span data=Amn>iman eder</span>, <span data=Axr>ahiret</span> gününe de kesin bir şekilde <span data=yqn>inanırlar</span>.
+Bu <span data=ktb>kitap</span> (Kur’an) ki onda asla <span data=ryb>şüphe</span> yoktur. <span data=wqy>Muttakîler</span> için bir <span data=hdy>rehberdir</span>. * Onlar <span data=gyb>gayba</span> <span data=Amn>inanır</span>, <span data=Slw>namaz</span> kılar ve <span data=rzq>rızık</span> olarak verdiklerimizden <span data=nfq>infak ederler</span>. * Sana <span data=nzl>indirilene</span> ve <span data=qbl>senden önce</span> <span data=nzl>indiri­lene</span> <span data=Amn>iman eder</span>, <span data=Axr>ahiret</span> gününe de kesin bir şekilde <span data=yqn>inanırlar</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=2:1" target="iqra">البقرة</a>
 <span data="harf">الٓمٓ</span> *
@@ -95,7 +95,7 @@ Bu <span data=ktb>kitap</span> (Kur’an) ki onda asla <span data=ryb>şüphe</s
     <td>
 <a class=sure href="/Kuran/reader.html#v=7:1" target="iqra">7 A'râf</a>
 <span data="harf">Elif Lâm Mîm Sâd</span> *
-Kendisiyle <span data=n*r>uyarman</span> için ve <span data=Amn>müminlere</span> (gerçeği) <span data=*kr>hatırlatma</span> olsun diye sana <span data=nzl>indirilen</span> bu <span data=ktb>kitaptan</span> dolayı <span data=Sdr>kalbinde</span> hiçbir <span data=Hrj>sıkıntı</span> <span data=kwn>olmasın</span>! * <span data=rbb>Rabbinizden</span> size <span data=nzl>indirilene</span> <span data=tbE>uyun</span>! <span data=dwn>O’nun peşi sıra</span> başka <span data=wly>dostlara</span> <span data=tbE>uymayın</span>! Ne kadar da <span data=qll>azınız</span> (gerçeği) <span data=*kr>hatırlıyor</span>!
+Kendisiyle <span data=n*r>uyarman</span> için ve <span data=Amn>müminlere</span> <span data=*kr>hatırlatma</span> olsun diye sana <span data=nzl>indirilen</span> bu <span data=ktb>kitaptan</span> dolayı <span data=Sdr>kalbinde</span> hiçbir <span data=Hrj>sıkıntı</span> <span data=kwn>olmasın</span>! * <span data=rbb>Rabbinizden</span> size <span data=nzl>indirilene</span> <span data=tbE>uyun</span>! <span data=dwn>O’nun peşi sıra</span> başka <span data=wly>dostlara</span> <span data=tbE>uymayın</span>! Ne kadar da <span data=qll>azınız</span> <span data=*kr>hatırlıyor</span>!
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=7:1" target="iqra">الأعراف</a>
 <span data="harf">الٓمٓصٓ</span> *
@@ -106,7 +106,7 @@ Kendisiyle <span data=n*r>uyarman</span> için ve <span data=Amn>müminlere</spa
 <a class=sure href="/Kuran/reader.html#v=10:1" target="iqra">10 Yunus</a>
 <span data="harf">Elif Lâm Râ</span>. 
 İşte şu(nlar), <span data=Hkm>hikmetli</span> <span data=ktb>Kitabın</span> <span data=Ayy>ayetleridir</span>. *
-İçlerinden bir <span data=rjl>adama</span> “<span data=nws>İnsanları</span> <span data=n*r>uyar</span> ve <span data=Amn>iman edenlere</span>, <span data=rbb>Rableri</span> <span data=End>katında</span> onlar için (yüksek) bir <span data=Sdq>doğruluk</span> <span data=qdm>makamı</span> olduğunu <span data=b$r>müjdele</span>!” diye <span data=wHy>vahyetmemiz</span> <span data=nws>insanlar</span> için <span data=Ejb>şaşılacak</span> bir şey mi oldu ki o <span data=kfr>kâfirler</span> “Bu elbette <span data=byn>apaçık</span> bir <span data=sHr>büyücüdür</span>” <span data=qwl>dediler</span>!
+İçlerinden bir <span data=rjl>adama</span> “<span data=nws>İnsanları</span> <span data=n*r>uyar</span> ve <span data=Amn>iman edenlere</span>, <span data=rbb>Rableri</span> <span data=End>katında</span> bir <span data=Sdq>doğruluk</span> <span data=qdm>makamı</span> olduğunu <span data=b$r>müjdele</span>!” diye <span data=wHy>vahyetmemiz</span> <span data=nws>insanlar</span> için <span data=Ejb>şaşılacak</span> bir şey mi oldu ki o <span data=kfr>kâfirler</span> “Bu elbette <span data=byn>apaçık</span> bir <span data=sHr>büyücüdür</span>” <span data=qwl>dediler</span>!
   <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=10:1" target="iqra">يونس</a>
 <span data="harf">الٓر</span> تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=Hkm>ٱلْحَكِيمِ</span> *
@@ -124,7 +124,7 @@ Kendisiyle <span data=n*r>uyarman</span> için ve <span data=Amn>müminlere</spa
     <td>
 <a class=sure href="/Kuran/reader.html#v=12:1" target="iqra">12 Yusuf</a>
 <span data="harf">Elif Lâm Râ</span>.
-İşte şu(nlar), <span data=byn>apaçık</span> <span data=ktb>Kitabın</span> <span data=Ayy>ayetleridir</span>. * Şüphesiz ki biz <span data=Eql>akıl edesiniz</span> diye onu <span data=Erb>Arapça</span> bir <span data=qrA>Kur’an</span> olarak <span data=nzl>indirdik</span>. * Biz sana bu <span data=qrA>Kur’an</span>’ı <span data=wHy>vahyetmekle</span> (eskilere dair) <span data=qSS>haberleri</span> sana en güzel şekilde <span data=qSS>anlatıyoruz</span>.  Elbette sen bundan önce <span data=gfl>habersizdin</span>.
+İşte şu(nlar), <span data=byn>apaçık</span> <span data=ktb>Kitabın</span> <span data=Ayy>ayetleridir</span>. * Şüphesiz ki biz <span data=Eql>akıl edesiniz</span> diye onu <span data=Erb>Arapça</span> bir <span data=qrA>Kur’an</span> olarak <span data=nzl>indirdik</span>. * Biz sana bu <span data=qrA>Kur’an</span>’ı <span data=wHy>vahyetmekle</span> <span data=qSS>haberleri</span> sana <span data=Hsn>en güzel</span> şekilde <span data=qSS>anlatıyoruz</span>.  Elbette sen <span data=qbl>bundan önce</span> <span data=gfl>habersizdin</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=12:1" target="iqra">يوسف</a>
 <span data="harf">الٓر</span>  تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=byn>ٱلْمُبِينِ</span> *
@@ -152,7 +152,7 @@ Kendisiyle <span data=n*r>uyarman</span> için ve <span data=Amn>müminlere</spa
 <a class=sure href="/Kuran/reader.html#v=15:1" target="iqra">15 Hicr</a>
 <span data="harf">Elif Lâm Râ</span>.
 İşte şu(nlar), <span data=ktb>Kitabın</span> ve <span data=byn>apaçık</span> <span data=qrA>Kur’an’ın</span> <span data=Ayy>ayetleridir</span>. *
-Bir zaman gelecek, <span data=kfr>kâfir</span> olanlar “Keşke biz de <span data=slm>müslüman</span> <span data=kwn>olsaydık</span>.” diye <span data=wdd>arzu</span> edecekler. * <span data=w*r>Onları bırak</span>; <span data=Akl>yesinler</span>, <span data=mtE>eğlensinler</span> ve <span data=Aml>boş ümit</span> onları <span data=lhw>oyalayadursun</span>! İleride (gerçeği) <span data=Elm>bilecekler</span>!
+Bir zaman gelecek, <span data=kfr>kâfir</span> olanlar “Keşke biz de <span data=slm>müslüman</span> <span data=kwn>olsaydık</span>.” diye <span data=wdd>arzu</span> edecekler. * <span data=w*r>Onları bırak</span>; <span data=Akl>yesinler</span>, <span data=mtE>eğlensinler</span> ve <span data=Aml>boş ümit</span> onları <span data=lhw>oyalayadursun</span>! İleride <span data=Elm>bilecekler</span>!
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=15:1" target="iqra">الحجر</a>
 <span data="harf">الٓر</span>  تِلْكَ <span data=Ayy>ءَايَٰتُ</span> <span data=ktb>ٱلْكِتَٰبِ</span> <span data=qrA>وَقُرْءَانٍ</span> <span data=byn>مُّبِينٍ</span> *
@@ -204,7 +204,7 @@ Bir zaman gelecek, <span data=kfr>kâfir</span> olanlar “Keşke biz de <span d
     <td>
 <a class=sure href="/Kuran/reader.html#v=28:1" target="iqra">28 Kasas</a>
 <span data="harf">Tâ Sîn Mîm</span> * 
-İşte şu(nlar), <span data=byn>apaçık</span> <span data=ktb>Kitabın</span> <span data=Ayy>ayetleridir</span>. * <span data=Amn>İman edecek</span> bir <span data=qwm>toplum</span> için <span data=muwsaY`>Musa</span> ile <span data=firoEawon>Firavun</span>’un <span data=nbA>haberinden</span> bir kısmını sana bir <span data=Hqq>amaç ile</span> <span data=tlw>tilavet</span> etmekteyiz (okuyup aktarmaktayız).
+İşte şu(nlar), <span data=byn>apaçık</span> <span data=ktb>Kitabın</span> <span data=Ayy>ayetleridir</span>. * <span data=Amn>İman edecek</span> bir <span data=qwm>toplum</span> için <span data=muwsaY`>Musa</span> ile <span data=firoEawon>Firavun</span>’un <span data=nbA>haberinden</span> bir kısmını sana bir <span data=Hqq>amaç ile</span> <span data=tlw>okuyoruz</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=28:1" target="iqra">القصص</a>
 <span data="harf">طسٓمٓ</span> *
@@ -214,7 +214,7 @@ Bir zaman gelecek, <span data=kfr>kâfir</span> olanlar “Keşke biz de <span d
     <td>
 <a class=sure href="/Kuran/reader.html#v=29:1" target="iqra">29 Ankebût</a>
 <span data="harf">Elif Lâm Mîm</span> *
-<span data=nws>İnsanlar</span>, <span data=ftn>imtihan edilmeden</span> sadece “<span data=Amn>İman ettik</span>!” <span data=qwl>demeleriyle</span> <span data=trk>bırakılacaklarını</span> mı <span data=Hsb>sandılar</span>! * Yemin olsun ki biz onlardan <span data=qbl>öncekileri</span> de <span data=ftn>imtihan etmiştik</span>. Elbette <span data={ll~ah>Allah</span> <span data=Sdq>doğruları</span> <span data=Elm>bil(dir)ecek</span> (ortaya çıkaracak), <span data=k*b>yalancıları</span> da mutlaka <span data=Elm>bil(dir)ecektir</span>.
+<span data=nws>İnsanlar</span>, <span data=ftn>imtihan edilmeden</span> sadece “<span data=Amn>İman ettik</span>!” <span data=qwl>demeleriyle</span> <span data=trk>bırakılacaklarını</span> mı <span data=Hsb>sandılar</span>! * Biz <span data=qbl>onlardan öncekileri</span> de <span data=ftn>imtihan etmiştik</span>. Elbette <span data={ll~ah>Allah</span> <span data=Sdq>doğruları</span> <span data=Elm>bil(dir)ecek</span> (ortaya çıkaracak), <span data=k*b>yalancıları</span> da mutlaka <span data=Elm>bil(dir)ecektir</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=29:1" target="iqra">العنكبوت</a>
 <span data="harf">الٓمٓ</span> *
@@ -224,7 +224,7 @@ Bir zaman gelecek, <span data=kfr>kâfir</span> olanlar “Keşke biz de <span d
     <td>
 <a class=sure href="/Kuran/reader.html#v=30:1" target="iqra">30 Rûm</a>
 <span data="harf">Elif Lâm Mîm</span> *
-<span data=r~uwm>Rumlar</span> <span data=dnw>en yakın</span> <span data=ArD>yerde</span> <span data=glb>yenildi</span>. * (Oysa) onlar bu <span data=glb>yenilgilerinden</span> <span data=bEd>sonra</span> <span data=bDE>birkaç</span> <span data=snw>sene</span> içinde <span data=glb>galip geleceklerdir</span>. * <span data=qbl>Önce</span> de <span data=bEd>sonra</span> da <span data=Amr>emir</span> yalnızca <span data={ll~ah>Allah</span>’a aittir. O gün de, <span data=Amn>müminler</span> <span data=frH>sevinecektir</span>.
+<span data=r~uwm>Rumlar</span> <span data=dnw>en yakın</span> <span data=ArD>yerde</span> <span data=glb>yenildi</span>. * Bu <span data=glb>yenilgiden</span> <span data=bEd>sonra</span> <span data=bDE>birkaç</span> <span data=snw>sene</span> içinde <span data=glb>galip geleceklerdir</span>. * <span data=qbl>Önce</span> ve <span data=bEd>sonra</span> <span data=Amr>emir</span> yalnızca <span data={ll~ah>Allah</span>’a aittir. O gün de, <span data=Amn>müminler</span> <span data=frH>sevinecektir</span>.
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=30:1" target="iqra">الروم</a>
 <span data="harf">الٓمٓ</span> *
@@ -246,7 +246,7 @@ Bir zaman gelecek, <span data=kfr>kâfir</span> olanlar “Keşke biz de <span d
     <td>
 <a class=sure href="/Kuran/reader.html#v=32:1" target="iqra">32 Secde</a>
 <span data="harf">Elif Lâm Mîm</span> *
-Kendisinde hiçbir <span data=ryb>şüphe</span> bulunmayan bu <span data=ktb>Kitabın</span> <span data=nzl>indirilişi</span> <span data=Elm>âlemlerin</span> <span data=rbb>Rabbindendir</span>. * Yoksa “<span data=fry>Onu uydurdu</span>” mu <span data=qwl>diyorlar</span>? Aksine <span data=hdy>doğru yolu bulsunlar</span> diye o, <span data=qbl>senden önce</span> kendilerine <span data=n*r>uyarıcı</span> <span data=Aty>gelmemiş</span> bir <span data=qwm>kavmi</span> data=n*r>uyarman</span> için <span data=rbb>Rabbinden</span> (gönderilen) <span data=Hqq>gerçektir</span>. 
+Kendisinde hiçbir <span data=ryb>şüphe</span> bulunmayan bu <span data=ktb>Kitabın</span> <span data=nzl>indirilişi</span> <span data=Elm>âlemlerin</span> <span data=rbb>Rabbindendir</span>. * Yoksa “<span data=fry>Onu uydurdu</span>” mu <span data=qwl>diyorlar</span>? <span data=hdy>Hidayet bulsunlar</span> diye o, <span data=qbl>senden önce</span> kendilerine <span data=n*r>uyarıcı</span> <span data=Aty>gelmemiş</span> bir <span data=qwm>kavmi</span> <span data=n*r>uyarman</span> için <span data=rbb>Rabbinden</span> (gönderilen) <span data=Hqq>gerçektir</span>. 
     <td class=ayet>
 <a class=sure href="/Kuran/reader.html#v=32:1" target="iqra">السجدة</a>
 <span data="harf">الٓمٓ</span> *
@@ -395,6 +395,11 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 15 Alr      36 ys       50 q
 19 khyES    38 S        68 n
 </pre>
+
+<h3 id=disclaimer>Sorumluluk Reddi</h3>
+<p>
+  Hurûf-u Mukatta'a, Kur’an-ı Kerim'de 29 sûrenin başındaki harflerdir ve haktır, hakikattır. Kitabı baştan sona okuyanlar bu harfleri de okumuş olurlar. Lakin, hurûfilikle ve hurâfelerle hiçbir ilgisi yoktur. Geleceği tahmin, falcılık, sihir, ya da başka türlü gaybi haberler için kullanılırsa, bu tamamen yapanların sorumluluğudur, bundan dolayı Şifreli Harfler bâtıl olamaz. Anlamını bilmiyoruz diye, asırlardır inkarcıları şaşırtan bu harfleri yok sayamayız.
+</p>
 
 <h3>Referans</h3>
 <p>
